--- a/2_1_quantities_and_amounts/style.css
+++ b/2_1_quantities_and_amounts/style.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
@@ -16,4 +17,12 @@ h3 {
 
 p {
   font-size: 1em;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+tr {
+  border-bottom: 1pt solid black;
 }
